# librelearning

./: .dockerignore  Cargo.toml  README.md  defined-in-js.js  index.html  libre_learning.js
.github/workflows/: rust.yml
assets/: manifest.json  sw.js
file_server/: Dockerfile_file_server  Dockerfile_nginx_cors  README.md  nginx.conf
file_server/config/: README.md
file_server/static/: card_0.json  card_3.json  card_5.json
file_server/static/indonesian/: card_0.json  card_1.json  card_2.json  card_3.json  card_4.json  card_5.json
src/: app.rs  backup_app.rs  lib.rs  main.rs  try_to_do_great_tings.rs
src/app_controller/: mod.rs
src/app_controller/model_controller/: mod.rs
src/app_controller/model_controller/data_model/: mod.rs
src/app_controller/model_controller/data_model/card_model/: mod.rs
src/app_controller/model_controller/data_model/download/: mod.rs
src/app_controller/model_controller/data_model/request_model/: mod.rs
src/app_controller/model_controller/data_model/spaced_repetition/: mod.rs
src/app_controller/model_controller/data_model/static_audio/: mod.rs
src/app_controller/model_controller/data_model/static_fonts/: mod.rs
src/app_controller/view_controller/: mod.rs
src/app_controller/view_controller/display/: mod.rs
src/app_controller/view_controller/view_model_controller/: mod.rs
src/audio/: mod.rs
src/download/: mod.rs
src/download/audio/: mod.rs
src/download/card/: mod.rs
src/download/image/: mod.rs
src/image/: mod.rs
src/spaced_repetition/: mod.rs
src/static_audio/: mod.rs
src/static_fonts/: mod.rs
src/windows/: mod.rs
src/windows/alert/: mod.rs
src/windows/card/: mod.rs
src/windows/review/: mod.rs
src/windows/settings/: mod.rs
static/: card_1.json  card_2.json  card_4.json
(+12 files in other folders)
