[package]
name = "libre_learning"
version = "0.1.0"
authors = ["Philipp Schlütermann <philipp.schluetermann@udo.edu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
egui = {version = "0.19.0" }
eframe = { version = "0.19.0", features = ["persistence"] }
serde = { version = "1", features = ["derive"] } # You only need this if you want app persistence 
ehttp = "0.2.0"
egui_extras = { version = "0.19.0", features = ["image"] } 
image = { version = "0.24", default-features = false, features = ["jpeg", "png"] }
derivative = "2.2.0"
#chrono = "0.4.22"

# native:
#[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
#tracing-subscriber = "0.3" 
#rodio = {version = "0.16.0", default-features = false, features = [ "flac", "vorbis", "wav" ] }
#bytes = "1.2.1"
# todo test audio.
# todo impl timestamp with systemtime or chrono.

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2" 
web-sys = { version = "0.3.4", features = ['HtmlAudioElement','AudioContext','AudioBuffer','AudioBufferSourceNode','AudioNode','AudioDestinationNode'] }
wasm-bindgen = "0.2.83" 
js-sys = "0.3.60" 
#wasm-bindgen-futures = "0.4.33" # to await promises


[profile.release]
opt-level = 2 # fast and small wasm


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
#egui = { git = "https://github.com/emilk/egui", branch = "master" }
#eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }


